--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,8 +10,27 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
 }
 
+.plants{
+  display: flex;
+  margin-top: 32px;
+  gap: 52px;
+  justify-content: center;
+}
+
+.example{
+  display: flex;
+  max-width: 200px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text{
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
