--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 img {
@@ -16,6 +20,13 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 input {
@@ -24,4 +35,26 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul{
+  display: flex;
+  list-style-type: none;
+  gap: 10px;
+}
+
+a{
+  text-decoration: none;
+  color: rgb(75, 75, 75);
+}
+
+.footer, .header{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 30px;
+}
+
+.footer{
+  background-color: #eee;
 }
