--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,18 +2,43 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  padding: 16px;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+}
+
+.content{
+  display: flex;
+  height: 100%;
+  align-content: stretch;
+  margin: 0;
+  flex-grow: 1;
+}
+
+.sidebar{
+  /* padding: 16px; */
+  width: 300px;
+  flex-shrink: 0;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
@@ -22,8 +47,32 @@ body {
   box-sizing: border-box;
 }
 
+.cards{
+  padding: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+a{
+  color: white;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  height: 300px;
+  width: 250px;
+  padding: 20px;
 }
